force-app/main/default/objects/ServiceTerritory/fields/Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location__c</fullName>
    <description>Provides Latitude and Longitude for a branch location.</description>
    <inlineHelpText>Provides Latitude and Longitude for a branch location.</inlineHelpText>
    <label>Branch Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>