force-app/main/default/objects/ServiceTerritory/fields/BSB_Number__c.field-meta.xml
<CustomField>
    <fullName>BSB_Number__c</fullName>
    <description>Custom field to store unique BSB number to maintain database sequence</description>
    <externalId>true</externalId>
    <inlineHelpText>Bank State Branch Number</inlineHelpText>
    <label>BSB Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>