force-app/main/default/objects/ServiceTerritory/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>Gives the services provided by a particular Bank branch based on the Services Code.</description>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Services_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Full branch services</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Transaction accounts</fullName>
            </value>
            <value>
                <fullName>Financial planning</fullName>
            </value>
            <value>
                <fullName>Insurances</fullName>
            </value>
            <value>
                <fullName>Home and investment loans</fullName>
            </value>
            <value>
                <fullName>Sales only branch</fullName>
            </value>
            <value>
                <fullName>New products and loans</fullName>
            </value>
            <value>
                <fullName>Fast deposit box (non-cash)</fullName>
            </value>
            <value>
                <fullName>No telling/no cash transactions available</fullName>
            </value>
            <value>
                <fullName>Sales Only - International</fullName>
            </value>
            <value>
                <fullName>Account Openings</fullName>
            </value>
            <value>
                <fullName>Account Enquires</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Financial Advice</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>Withdrawals</fullName>
            </value>
            <value>
                <fullName>Limited Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>