force-app/main/default/objects/ServiceTerritory/fields/Services_Code__c.field-meta.xml
<CustomField>
    <fullName>Services_Code__c</fullName>
    <description>This is the code passed by Master Data Service (MSD). Each code is associated with a set of services a particular bank branch can provide.</description>
    <label>Services Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>92</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>