force-app/main/default/objects/ServiceTerritory/recordTypes/Branch.recordType-meta.xml
<RecordType>
    <fullName>Branch</fullName>
    <active>true</active>
    <description>Creating ANZ Branches</description>
    <label>Branch</label>
</RecordType>